src/FinancialForce Accounting/objects/codaFormatData__c.object
<CustomObject>
    <description>Stores a part of the formats saved from FinancialForce Print Formatter.</description>
    <fields>
        <fullName>AppendOnly__c</fullName>
        <label>AppendOnly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>com_append_only_round_sum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BackgroundColour__c</fullName>
        <label>BackgroundColour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BorderBottom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BorderBottom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BorderColour__c</fullName>
        <label>BorderColour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BorderLeft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BorderLeft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BorderRight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BorderRight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BorderStyle__c</fullName>
        <label>BorderStyle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_line_solid</fullName>
                </value>
                <value>
                    <fullName>com_line_dotted</fullName>
                </value>
                <value>
                    <fullName>com_line_dashed</fullName>
                </value>
                <value>
                    <fullName>com_line_double</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BorderTop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BorderTop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BorderWeight__c</fullName>
        <label>BorderWeight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_line_weight_thin</fullName>
                </value>
                <value>
                    <fullName>com_line_weight_normal</fullName>
                </value>
                <value>
                    <fullName>com_line_weight_thick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateTimeFormat__c</fullName>
        <label>DateTimeFormat</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecimalsAsDigits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decimals As Digits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayAsWords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisplayAsWords</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FontBold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FontBold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FontColour__c</fullName>
        <label>FontColour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FontFamily__c</fullName>
        <label>FontFamily</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontItalic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FontItalic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FontSize__c</fullName>
        <label>FontSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FontStrikethrough__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FontStrikethrough</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FontUnderline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FontUnderline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAlign__c</fullName>
        <label>HAlign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_halign_left</fullName>
                </value>
                <value>
                    <fullName>com_halign_centre</fullName>
                </value>
                <value>
                    <fullName>com_halign_right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LineSpacing__c</fullName>
        <label>LineSpacing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NegativeColour__c</fullName>
        <label>NegativeColour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberFormat__c</fullName>
        <label>NumberFormat</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Padding__c</fullName>
        <label>Padding</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAlign__c</fullName>
        <label>VAlign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_valign_top</fullName>
                </value>
                <value>
                    <fullName>com_valign_middle</fullName>
                </value>
                <value>
                    <fullName>com_valign_botton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Format Data</label>
    <nameField>
        <label>Format Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Format Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>